--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <input type="file" name="dossier">
     
     <label for="check">Je ne suis pas un robot</label>
-    <input type="checkbox" value="check"
+    <input type="checkbox" value="check">
 
     <input type="submit" value="Soumettre">
 
